TEST_PROGRAMS/VALID/typedeclcomp.go
package main

func main(){
    type( 
        num int;
    point stuct {
        y, x float64
    }
    )
}
