TEST_PROGRAMS/INVALID/08/structLit.go
package main;
type point struct{
    x,y int;
}
var z = point{1,2};
